# blackBox

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  toolchain-mingw.cmake
.github/workflows/: cmake-multi-platform.yml
lib/communication/: can.cpp  can.h  communication_manager.cpp  communication_manager.h  spi.cpp  spi.h  uart.cpp  uart.h
lib/data/: data_logger.cpp  data_logger.h
lib/hardwareAbstractionLayer/: adc.cpp  adc.h  gpio.cpp  gpio.h  hal.cpp  hal.h  timer.cpp  timer.h
lib/sensor/: accelerometer.cpp  accelerometer.h  gps.cpp  gps.h  gyroscope.cpp  gyroscope.h  sensor_manager.cpp  sensor_manager.h
